Bug squashing is finished in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -386,7 +386,7 @@ body {
 @media only screen
 and (device-width : 375px)
 and (device-height : 812px)
-and (-webkit-device-pixel-ratio : 3) {h2{font-size: 15pt !important;}}
+and (-webkit-device-pixel-ratio : 3) {h2{font-size: 12pt !important;}}
 
 @media screen and (max-width: 980px) {
 
